add missing cli argument to dockerfile